# rea-fetch

./: .gitignore  Dockerfile  build.sh  fetch.sh  profile.sh  rea-fetch.cabal  rea.cabal  stack.yaml
src/: Main.hs  OnSale.hs  ResultsParsing.hs  Sold.hs
