name:                rea
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rea#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rea
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , tagsoup == 0.14
                        , HTTP == 4000.3.3
                        , regex-tdfa == 1.2.2
                        , time == 1.6.0.1
                        , directory == 1.2.6.2
